--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@mui/material": "^5.14.18",
     "@studio-freight/lenis": "^1.0.27",
     "axios": "^1.6.2",
-    "gsap": "^3.12.2",
+    "gsap": "^3.12.3",
+    "mdb-react-ui-kit": "^7.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mongodb": "^3.5.9",
     "mongoose": "^8.0.0",
+    "motion": "^10.16.4",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.2",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4"
